feign调用降级方法

--- a/order_service_feign/src/main/resources/application.yml
+++ b/order_service_feign/src/main/resources/application.yml
@@ -28,6 +28,9 @@ feign:
     config:
       service-product:  #需要调用的服务名称
         loggerLevel: FULL
+  hystrix:
+    enabled: true
+
 logging:
   level:
     com.huike.order.feign.ProductFeignClient: debug
