--- a/order_service_rest/src/main/resources/application.yml
+++ b/order_service_rest/src/main/resources/application.yml
@@ -31,3 +31,8 @@ hystrix:
     isolation:
      thread:
       timeoutInMilliseconds: 3000 #默认的连接超时时间1秒,若1秒没有返回数据,自动的触发降级逻辑
+   circuitBreaker:
+    requestVolumeThreshold: 5 #触发熔断的最小请求次数，默认20
+    sleepWindowInMilliseconds: 10000 #熔断多少秒后去尝试请求
+    errorThresholdPercentage: 50 #触发熔断的失败请求最小占比，默认50%
+
